// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders a clear icon given type "clear" 1`] = `
<span
  class="wikit wikit-Icon wikit-Icon--large wikit-Icon--base"
>
  <svg
    class="wikit-Icon__svg"
    fill="none"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 0a10 10 0 1010 10A10 10 0 0010 0zm5.66 14.24l-1.41 1.41L10 11.41l-4.24 4.25-1.42-1.42L8.59 10 4.34 5.76l1.42-1.42L10 8.59l4.24-4.24 1.41 1.41L11.41 10z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`Icon renders an alert icon given type "alert" 1`] = `
<span
  class="wikit wikit-Icon wikit-Icon--large wikit-Icon--base"
>
  <svg
    class="wikit-Icon__svg"
    fill="none"
    viewBox="0 0 16 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.163 1.68234C9.06078 1.4381 8.89901 1.22746 8.69449 1.07231C8.48997 0.917151 8.25017 0.823144 7.99999 0.800049C7.75116 0.82453 7.51294 0.919178 7.30987 1.07425C7.10679 1.22933 6.94619 1.43922 6.84459 1.68234L0.672272 13.0631C0.0337565 14.2368 0.558251 15.2 1.82768 15.2H14.1723C15.4417 15.2 15.9662 14.2368 15.3277 13.0631L9.163 1.68234ZM8.76013 12.7717H7.23986V11.1528H8.76013V12.7717ZM8.76013 9.53394H7.23986V4.67728H8.76013V9.53394Z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`Icon renders an error icon given type "error" 1`] = `
<span
  class="wikit wikit-Icon wikit-Icon--large wikit-Icon--base"
>
  <svg
    class="wikit-Icon__svg"
    fill="none"
    viewBox="0 0 16 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11.4939 0H4.50612L0 4.50612V11.5102L4.50612 16H11.5102L16 11.4939V4.50612L11.4939 0Z
				M8.8 11.9938H7.2V10.3999H8.8V11.9938Z
				M8.8 9.6H7.2V4H8.8V9.6Z"
      fill="currentColor"
    />
  </svg>
</span>
`;
